# rag-boilerplate

./: .env.example  .gitignore  AUTO-OPTIMIZE-BRIEFING.md  AUTO-OPTIMIZE-BUILD-STATE.md  AUTO-OPTIMIZE.md  DOCLING-ENHANCEMENTS-PLAN.md  PLAN.md  README.md  docker-compose.dev.yml  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  rag-auto-optimizer-nightly.skill  vitest.config.ts
.ai/: CONTEXT.md  INBOX.md  LEARNINGS.md
.claude/: CLAUDE.md
app/: globals.css  layout.tsx  page.tsx
components/: app-sidebar.tsx  nav-main.tsx  nav-user.tsx  team-switcher.tsx
docs/: DEPLOYMENT-FEEDBACK.md  api-guide.md  rag-dead-transcript.md  rag-design-guide.docx  rag-vertical-dev-icp.docx  rag-vertical-icp.docx  react-ai-chatbot-example.md  trigger-dev-research.md
planning/: DECISIONS.md  PHASE_2_5_PLAN.md  PROJECT_BRIEF.md  PROJECT_PLAN.md
prompts/: HANDOFF_PROMPT.md
scripts/: nightly-optimizer.sh  run-night-shift.sh
services/ingestion/: .env.example  .gitignore  Dockerfile  pyproject.toml  start-ingestion.sh
services/ingestion/src/: chunker.py  classifier.py  config.py  contextualizer.py  embedder.py  main.py  parser.py  right_sizer.py  semantic_units.py  vlm.py  worker.py
services/ingestion/tests/: test_cache_invalidation.py  test_chunker.py  test_classifier.py  test_contextualizer.py  test_embedder.py  test_parser.py  test_right_sizer.py  test_semantic_units.py  test_vlm.py  test_worker.py
services/ingestion/tests/fixtures/: sample.md  sample.txt
specs/: ARCHITECTURE.md  DATA_MODEL.md  PRD.md
supabase/: config.toml
types/: database.types.ts
(+194 files in other folders)
