[project]
name = "rag-ingestion-service"
version = "0.1.0"
description = "Document ingestion service using Docling + pgmq"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "docling>=2.14.0",
    "openai>=1.60.0",
    "supabase>=2.11.0",
    "psycopg2-binary>=2.9.0",
    "google-genai>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
